--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Dissertation"
+    url: /dissertation/
 
   - title: "Talks"
     url: /talks/    
@@ -9,11 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Projects and Activities"
+    url: /projectsandactivities/
     
   - title: "CV"
     url: /cv/
